# C-_Portfolio

./: .gitignore  CMakeLists.txt  README.md  log.txt  main  main.cpp  shell.html  test  test_glfw  test_glfw.cpp
BasicTasks/: BasicTasks.cpp  BasicTasks.h
Classes/: ConsoleManager.cpp  ConsoleManager.h  InputManager.cpp  InputManager.h  Menu.cpp  Menu.h  MenuManager.cpp  MenuManager.h  PluginManager.cpp  PluginManager.h  Task.h  TaskManager.cpp  TaskManager.h  TaskPlugin.h  TaskRegistry.cpp  TaskRegistry.h
OOPTasks/: OOPTasks.h
StringTasks/: StringTasks.cpp  StringTasks.h  StringTasksPlugin.cpp  StringTasksPlugin.h
tests/: BasicTasks.cpp  StringTasks.cpp
